--- a/main.css
+++ b/main.css
@@ -3090,7 +3090,8 @@
 	#banner {
 		padding: 16em 0 13em 0;
 		background-attachment: fixed;
-		background-image: url("images/backgroundImage.jpg"), url("../../images/backgroundImage.jpg");
+	/*	background-image: url("images/backgroundImage.png"), url("../../images/backgroundImage.png"); 
+        background-color: grey;*/
 		background-position: center top;
 		background-size: cover;
 		line-height: 1.75;
